# pyweather

./: .env.example  .gitignore  .releaserc  LICENSE  Makefile  README.md  dangerfile.ts  pyproject.toml  pytest.ini  secrets.ini.sample
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  dependabot.yml
.github/workflows/: bitbucket_sync.yaml  build.yml  codeql.yaml  dangerci.yaml  gitlab_sync.yml  lint.yml  publish.yml  release.yml  slack.yml  tests.yaml
.gitlab/: .gitlab-webide.yml  CODEOWNERS
.gitlab/issue_templates/: bug_report.md
.gitlab/merge_request_templates/: base.md
hangman/: player_input.py  word_repository.py
pyweather/: __main__.py  cli.py  draw.py  entities.py  style.py  utils.py  weather.py  weather_api.py
pyweather/api/: __init__.py
pyweather/clients/mcp/: entities.py  main.py  prompts_handler.py  resource_handler.py  weather_agent.py
pyweather/entities/: __init__.py  config.py  weather_data.py
pyweather/mcp/client/: agent.py  main.py  prompts_handler.py  resource_handler.py
pyweather/mcp/client/langchain/: agent.py  main.py
pyweather/mcp/client/llama/: main.py
pyweather/mcp/servers/rag/: config.py  employee_handbook.txt  main.py  server.py  tools.py
pyweather/mcp/servers/tasks/: main.py  prompts.py  resources.py  server.py  tools.py
pyweather/mcp/servers/weather/: main.py  prompts.py  resources.py  server.py  tools.py
pyweather/servers/mcp/: main.py  prompts.py  resources.py  server.py  tools.py
src/app/: __main__.py  cli.py  langchain_client.py  llama_client.py  utils.py
src/app/api/: __init__.py  weather_api.py
src/app/clients/mcp/: __init__.py
src/app/clients/mcp/langchain/: __init__.py  agent.py  client.py  prompts_handler.py  resource_handler.py
src/app/clients/mcp/llama/: __init__.py  client.py
src/app/entities/: __init__.py  config.py  weather_data.py
tests/: test_entities.py  test_game.py  test_player_input.py  test_utils.py  test_word_repository.py
(+15 files in other folders)
