[tool.poetry]
name = "pyweather"
# This version field is not being used. The version field is dynamically updated as below
version = "0.0.0-post.11+c22f808"
description = "Weather CLI in the terminal"
authors = ["BrianLusina <12752833+BrianLusina@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
pytest = "^8.4.1"
black = "^25.1.0"
pre-commit = "^4.2.0"
flake8 = "^7.3.0"
mypy = "^1.17.1"
coverage = "^7.10.1"
pytest-cov = "^6.2.1"
twine = "^6.1.0"

[tool.mypy]
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
ignore_missing_imports = true

# reference: https://github.com/mtkennerly/poetry-dynamic-versioning
[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "semver"
latest-tag = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
