[project]
name = "pyweather"
version = "0.1.0"
description = "Weather Assistant"
authors = ["BrianLusina <12752833+BrianLusina@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.7",
    "langchain-google-genai>=3.0.3",
    "langchain-mcp-adapters>=0.1.13",
    "langgraph>=1.0.3",
    "mcp>=1.21.2",
]

[dependency-groups]
lint = [
    "pre-commit>=4.4.0",
    "pyrefly>=0.42.1",
    "ruff>=0.14.5",
]
test = [
    "coverage>=7.11.3",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]
tools = [
    "twine>=6.2.0",
]
